2002-12-10  Jason Thorpe  <thorpej@wasabisystems.com>

	* lib/ld-lib.exp (is_elf_format): Match NetBSD ELF targets.

2002-12-03  Nick Clifton  <nickc@redhat.com>

	* ld-powerpc/powerpc.exp (ppcelftests): Add apuinfo merging
	test.
	* ld-powerpc/apuinfo1.s: New assembler source file.
	* ld-powerpc/apuinfo2.s: New assembler source file.
	* ld-powerpc/apuinfo.rd: New expected output file.

2002-12-01  Stephane Carrez  <stcarrez@nerim.fr>

	Fix PR savannah/1417:
	* ld-m68hc11/bug-1417.s: New test.
	* ld-m68hc11/bug-1417.d: Likewise.

2002-11-28  Jakub Jelinek  <jakub@redhat.com>

	* ld-i386/tlsnopic.rd: Change NOTYPE to TLS for UND sg* symbols.

2002-11-28  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* ld-sh/refdbg-0-dso.d: New test.
	* ld-sh/refdbg-1.d: Likewise.
	* ld-sh/refdbg.s: Likewise.
	* ld-sh/refdbglib.s: Likewise.

2002-11-22  Alan Modra  <amodra@bigpond.net.au>

	* ld-elf/elf.exp: Remove sec64k test.
	* ld-elf/sec64k.exp: Reinstate.

2002-11-21  Alan Modra  <amodra@bigpond.net.au>

	* ld-elf/elf.exp: Renamed from sec64k.exp.  Add test_list loop.
	* ld-elf/merge.s: New file.
	* ld-elf/merge.d: New file.
	* ld-elf/merge.ld: New file.

2002-11-18  Svein E. Seldal  <Svein.Seldal@solidas.com>

	* ld-scripts/script.exp: Setup for tic4x testcase

2002-11-15  Nick Clifton  <nickc@redhat.com>

	* ld-h8300: New directory.
	* ld-h8300/h8300.exp: New expect script.  Only run tests for h8300
	targets.
	* ld-h8300/relax.s: New assembler source file.
	* ld-h8300/relax.d: New expected output file.

2002-11-11  Hans-Peter Nilsson  <hp@axis.com>

	* ld-elf/sec64k.exp: New test.
	* lib/ld-lib.exp (run_dump_test): Don't prepend "$srcdir/$subdir/"
	to a source file starting with "/".

2002-11-10  Hans-Peter Nilsson  <hp@bitrange.com>

	* ld-mmix/local1.d, ld-mmix/local3.d, ld-mmix/local5.d,
	ld-mmix/local7.d: Tweak for change in readelf output.

2002-11-09  Alan Modra  <amodra@bigpond.net.au>

	* ld-elfvsb/define.s: Avoid use of @ in .type directive.
