@@ -1,3 +1,8 @@
+2002-12-12  Alexandre Oliva  <aoliva@redhat.com>
+
+	* ld-mips-elf/mips-elf.exp: Remove branch-misc-2 test.
+	* ld-mips-elf/branch-misc-2.d: Removed.
+
 2002-12-10  Jason Thorpe  <thorpej@wasabisystems.com>
 
 	* lib/ld-lib.exp (is_elf_format): Match NetBSD ELF targets.
